--- a/docs/FrancescoSaverioZuppichini.tex
+++ b/docs/FrancescoSaverioZuppichini.tex
@@ -23,7 +23,7 @@ All the code is open source and hosted on my GitHub \href{https://github.com/Fra
 
 We also provided a cli to quickly use the model, type \texttt{python3 main.py --help} in order to see the available options.
 \subsection{Generate text}
-The following snipper shows how to generate $500$ chars using 'TEST' as starting input from the $shakespeare$ model:
+The following snippet shows how to generate $500$ chars using 'TEST' as starting input from the $shakespeare$ model:
 \begin{lstlisting}[breaklines=true]
 python3 main.py --generate=True --from_model='shakespeare' --n_text=500 --start_text="TEST"	
 \end{lstlisting}
